=== HEAD

* Use primary_key :keep_order option in the schema dumper if the auto incrementing column is not the first column in the table (jeremyevans)

* Set :auto_increment option correctly in the schema parser when the auto incrementing column is not the first column in the table (jeremyevans)

* Support :keep_order option to primary_key in schema generator, to not automatically make the primary key the first column (jeremyevans)

* Add new jsonb/json functions and operators supported in PostgreSQL 9.5+ (jeremyevans)

* Add before_after_save plugin, for refreshing created objects and resetting modified flag before calling after_create/update/save hooks (jeremyevans)

* Add Dataset#single_record! and #single_value! which don't require cloning the receiver (jeremyevans)

* Dataset#with_sql_single_value now works correctly for model datasets (jeremyevans)

* Optimize Dataset#single_value and #with_sql_single_value to not create an unnecessary array (jeremyevans)

* Make postgres adapter work with postgres-pr 0.7.0 (jeremyevans) (#1074)

=== 4.26.0 (2015-09-01)

* Make Dataset#== not consider frozen status in determining equality (jeremyevans)

* Support :if_exists option to drop_column on PostgreSQL (jeremyevans)

* Add Dataset#grouping_sets to support GROUP BY GROUPING SETS on PostgreSQL 9.5+, MSSQL 2008+, Oracle, DB2, and SQLAnywhere (jeremyevans)

* Fix handling of Class.new(ModelClass){set_dataset :table} on ruby 1.8 (jeremyevans)

* Use range function constructors instead of casts for known range types in pg_range (jeremyevans) (#1066)

* Make class_table_inheritance plugin work without sti_key (jeremyevans)

* Detect additional disconnect errors when using the tinytds adapter (jeremyevans)

* Make offset emulation without order but with explicit selection handle ambiguous column names (jeremyevans)

* Allow preparing already prepared statements when emulating limits and/or offsets (jeremyevans)
